# rcmp

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml  build-config.json  build-on-push.yml  inspect-code.yml  tagged-release.yml  test-clang.yml  test-gcc.yml  test-msvc.yml
include/: rcmp.hpp
include/rcmp/: codegen.hpp  low_level.hpp  memory.hpp  version.hpp
include/rcmp/detail/: address.hpp  calling_convention.hpp  config.hpp  exception.hpp  hook_installer.hpp  hook_state.hpp  scope_exit.hpp
include/rcmp/detail/hook_installer/: global_state.hpp
include/rcmp/detail/hook_policy/: indirect_policy.hpp  prolog_policy.hpp  with_global_state.hpp
include/rcmp/hook_policy/: hook_indirect_policy.hpp  hook_prolog_policy.hpp
source/: codegen.cpp  memory.cpp
source/detail/arch/: impl.cpp
source/detail/arch/arm64/: impl.cpp
source/detail/arch/x86/: impl.cpp
source/detail/arch/x86-64/: impl.cpp
source/detail/arch/x86-64-common/: impl.cxx
source/detail/platform/: impl.cpp
source/detail/platform/linux/: impl.cpp
source/detail/platform/win/: impl.cpp
test/: CMakeLists.txt  test_conv_meta.cpp  test_hooks.cpp
test/validate_headers/: codegen.cpp  low_level.cpp  memory.cpp  rcmp.cpp  version.cpp
